# VKG_quote_analizer

./: .clang-format  CMakeLists.txt  README.md  build.sh  candles_factory.cpp  candles_factory.hpp  main.cpp  quotes_reader.cpp  quotes_reader.hpp  sma_factory.cpp  sma_factory.hpp  time_helpers.hpp  write_output.hpp
